# pbfuzz

./: .gitignore  Dockerfile  README.md  amber-manifest.json5  cursor-cli-config.json  docker-compose.yml  pyproject.toml  scenario.toml
fallback/: __init__.py  cursor_runner.py  prompts.py  runner.py
pbfuzz/: README.md  config.json  config.py  debugger.py  gdb.sh  knowledge.json  launcher.py  libclang.py  llm_api.py  mcp_build_core.py  mcp_build_server.py  mcp_fuzzer_server.py  mcp_gdb_server.py  mcp_workflow_server.py  prompt.py  property_based_fuzzer.py  requirements.txt  schemas.py  source_code.py  ts.py  utils.py  verify_environment.py
pbfuzz/templates/: project_config.md  workflow_state.md
pbfuzz/tests/: test_debugger.py  test_mcp_build_server.py  test_mcp_fuzzer_server.py  test_mcp_gdb_e2e.py  test_mcp_workflow_server.py  test_property_based_fuzzer.py  test_source_code_bid_mapping.py
pbfuzz/tests/fixtures/: exit_code_1.c  gen_0.py  gen_xml.py  loop_basic.c  loop_empty_line.c  loop_multiple.c  loop_stdin.c  readelf.cpp  sigsegv.c  test.c  test.cpp  test.h  test_overloaded_functions.c  test_overloaded_functions2.c  timeout_continue.c  timeout_launch.c
pbfuzz/tests/fixtures/readelf_static_analysis/: BBtargets.txt  bid_loc_mapping.txt  callee-caller.txt  caller-callee.txt  critical_BBs.txt  distance.cfg.txt  function_info.txt
scripts/: smoke.sh
src/: agent.py  cursor_runner.py  executor.py  init_check.py  output_sync.py  pbfuzz_env.py  prompts.py  server.py  workspace.py
src/pbfuzz_repro/: __init__.py  cli.py  cursor_runner.py  ffmpeg_demo.sh  init_check.py  logs.py  pbfuzz_env.py  prompts.py  runner.py  workspace.py
tests/: conftest.py  test_agent.py
