# PBFuzz — agentic directed fuzzing for CVE bug reproduction.

[project]
name = "pbfuzz"
version = "0.2.0"
description = "Agentic directed fuzzing to reproduce CVEs from description + fix patch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "mcp>=1.13",
]

[project.scripts]
pbfuzz = "pbfuzz_repro.cli:main"

[project.optional-dependencies]
pbfuzz-core = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "dap-mcp>=0.1.5",
    "dap-types>=0.1.0",
    "cxxfilt>=0.3.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.0",
    "libclang>=16.0.0",
    "psutil",
    "packaging",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbfuzz_repro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "pbfuzz"]
testpaths = ["tests", "pbfuzz/tests"]
